--- a/CotizadorQuarkExamen/CotizadorQuarkExamen.csproj
+++ b/CotizadorQuarkExamen/CotizadorQuarkExamen.csproj
@@ -46,14 +46,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modelo\Camisa.cs" />
+    <Compile Include="Modelo\Cotizacion.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modelo\Pantalon.cs" />
+    <Compile Include="Modelo\Prenda.cs" />
+    <Compile Include="Controlador\ViewController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Modelo\Tienda.cs" />
+    <Compile Include="Modelo\Vendedor.cs" />
+    <Compile Include="Vista\IMainView.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,5 +87,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
